--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-basic-auth": "^1.1.5",
     "mongodb": "^3.1.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "save": "^2.3.2"
   }
 }
