--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-basic-auth": "^1.1.5",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mongodb": "^3.1.0",
     "nodemon": "^1.17.5",
     "save": "^2.3.2"
